Some Yue Loc Corrections

--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -96,7 +96,7 @@
  me_yue_state_5.a: "We have a new subject"
  
  me_yue_state_500_title: "$missions_yue_state_task_5$"
- me_yue_state_500_desc: "It was easy to convince their court, with hints of likely invasion if they did not obey, that they ought join our nation outright."
+ me_yue_state_500_desc: "It was easy to convince their court, with hints of likely invasion if they did not obey, that they ought to join our nation outright."
  me_yue_state_500.a: "They have been integrated."
 
  me_yue_state_6_title: "$missions_yue_state_task_6$"
@@ -112,7 +112,7 @@
  me_yue_state_8.a: "We will sail yet further still..."
 
  me_yue_state_9_title: "$missions_yue_state_task_9$"
- me_yue_state_9_desc: "We rode upon the Chu encampment at right, at the new moon, to ensure we would not be caught. Our men studied the terrain beforehand, sure of their path in the pitch black. We came upon our enemy like a strike of lightning, striking terror into the half-asleep Chu infnatry and cut them to pieces. They were completely routed from the area."
+ me_yue_state_9_desc: "We rode upon the Chu encampment at right, at the new moon, to ensure we would not be caught. Our men studied the terrain beforehand, sure of their path in the pitch black. We came upon our enemy like a strike of lightning, striking terror into the half-asleep Chu infantry and cut them to pieces. They were completely routed from the area."
  me_yue_state_9.a: "The Chu never saw it coming."
 
  me_yue_state_10_title: "$missions_yue_state_task_10$"
@@ -120,7 +120,7 @@
  me_yue_state_10.a: "We were right to study Sun Tzu."
 
  me_yue_state_11_title: "$missions_yue_state_task_11$"
- me_yue_state_11_desc: "The theft of our lands at the hands of Qi, all those years ago, have finally be rectified. The Yue peoples will nevermore be subject to the terror of the supposedly civilized states of the north, most especially one so arrogant and haughty as the Qi."
+ me_yue_state_11_desc: "The theft of our lands at the hands of Qi, all those years ago, have finally been rectified. The Yue peoples will nevermore be subject to the terror of the supposedly civilized states of the north, most especially one so arrogant and haughty as the Qi."
  me_yue_state_11.a: "We have been avenged!"
 
  me_yue_state_12_title: "$missions_yue_state_task_12$"
@@ -132,7 +132,7 @@
  me_yue_state_13.a: "Our coffers will fill with their tribute!"
 
  me_yue_state_14_title: "$missions_yue_state_task_14$"
- me_yue_state_14_desc: "The legendary Maiden of the Southern Forest has been tracked down, [ROOT.GetCountry.GetRuler.GetName]. Her hunting skills are unmatched, and her ability to wield a sword and bow are of the highest skill. Upon being awestuck by this womans talent, [ROOT.GetCountry.GetRuler.GetName] ordered that women from henceforth be allowed to participate in military and the government according to merit. While some in the court needed cajoling, most accepted the decision without recourse."
+ me_yue_state_14_desc: "The legendary Maiden of the Southern Forest has been tracked down, [ROOT.GetCountry.GetRuler.GetName]. Her hunting skills are unmatched, and her ability to wield a sword and bow are of the highest skill. Upon being awestuck by this womans talent, [ROOT.GetCountry.GetRuler.GetName] ordered that women from henceforth be allowed to participate in the military and the government according to merit. While some in the court needed cajoling, most accepted the decision without recourse."
  me_yue_state_14.a: "Women shall fight and lead among us!"
 
  me_yue_state_15_title: "$missions_yue_state_task_15$"
@@ -144,7 +144,7 @@
  me_yue_state_16.a: "Their wealth now belongs to our country."
 
  me_yue_state_17_title: "$missions_yue_state_task_17$"
- me_yue_state_17_desc: "The last major Yue state on the southern coast, Nanyue, has fallen to our armies, lord [ROOT.GetCountry.GetRuler.GetName]. Our tribal warriors ambushed their columns in the jungles, flanking them from two sides and utterly routing their legions. With the army shattered, their capital capitulated and the Nanyue tribes would not willing bow to our rule."
+ me_yue_state_17_desc: "The last major Yue state on the southern coast, Nanyue, has fallen to our armies, lord [ROOT.GetCountry.GetRuler.GetName]. Our tribal warriors ambushed their columns in the jungles, flanking them from two sides and utterly routing their legions. With their army shattered, their capital capitulated and the Nanyue tribes would now willingly bow to our rule."
  me_yue_state_17.a: "Nanyue is ours, as it should be."
 
  me_yue_state_18_title: "$missions_yue_state_task_18$"
@@ -157,7 +157,7 @@
  me_yue_state_19.a: "These strange people are now our subjects."
 
  me_yue_state_20_title: "$missions_yue_state_task_20$"
- me_yue_state_20_desc: "We have reclaimed our lost northerlands, lord [ROOT.GetCountry.GetRuler.GetName]! The vast majority of the Yue peoples now lay in our domain, great uniter. The Chu will now understand that we are no longer to be trifled with."
+ me_yue_state_20_desc: "We have reclaimed our lost northern lands, lord [ROOT.GetCountry.GetRuler.GetName]! The vast majority of the Yue peoples now lay in our domain, great uniter. The Chu will now understand that we are no longer to be trifled with."
  me_yue_state_20.a: "The Yue lands have been made whole."
 
  me_yue_state_21_title: "$missions_yue_state_task_21$"
@@ -314,8 +314,8 @@
  me_yue_langyayue_500.a: "$me_yue_state_500.a$"
  
  me_yue_langyayue_15_title: "$missions_yue_state_task_15$"
- me_yue_langyayue_15_desc: "$me_yue_state_15_desc$"
- me_yue_langyayue_15.a: "$me_yue_state_15.a$"
+ me_yue_langyayue_15_desc: "The Ouyue and Minyue of the treacherous jungles and mountaints of the inland regions are the first Yue group along the coast of China on our march to unite the Great Yue. Their rich ports rival that of our own, and their numerous harbors and coastal resources will provide great wealth to the kingdom."
+ me_yue_langyayue_15.a: "All Yue will soon bow to us."
 
  me_yue_langyayue_16_title: "$missions_yue_state_task_16$"
  me_yue_langyayue_16_desc: "With the fall of [GetProvince('(int32)8718').GetName], now all major rivers are in control of our seafaring people. It is already too late for all the ignorant rulers of the Middle Kingdoms to learn their lesson, but it surely will be a painful one."
@@ -323,7 +323,7 @@
  
  me_yue_langyayue_20_title: "$missions_yue_state_task_20$"
  me_yue_langyayue_20_desc: "$me_yue_state_20_desc$"
- me_yue_langyayue_20.a: "$me_yue_state_20.a$"
+ me_yue_langyayue_20.a: "The Yue's domain is growing."
  
  #################
  #Yue Tribes Delta#
@@ -416,7 +416,7 @@
  me_yue_tribes_15.a: "Only united we are strong."
 
  me_yue_tribes_16_title: "$missions_yue_tribes_task_16$"
- me_yue_tribes_16_desc: "[ROOT.GetCountry.GetRuler.GetName] has accepted our generous offer and will now rule our new kingdom."
+ me_yue_tribes_16_desc: "[new_yue_ruler.GetName] has accepted our generous offer. When he finally sat foot into our new kingdom, all our people gathered around and cheered joyfully. Everyone is joyfully looking towards our bright future."
  me_yue_tribes_16.a: "Long live the descendants of Yu the Great!"
  
  me_yue_tribes_1600_title: "$missions_yue_tribes_task_16$"
@@ -425,7 +425,7 @@
  me_yue_tribes_1600.b: "There is still hope to defeat the Chu on our own."
  
  me_yue_tribes_1601_title: "$missions_yue_tribes_task_16$"
- me_yue_tribes_1601_desc: "[ROOT.GetCountry.GetRuler.GetName] has accepted our generous offer and will now rule our new kingdom."
+ me_yue_tribes_1601_desc: "[ROOT.GetCountry.GetRuler.GetName] has accepted our generous offer. When he finally sat foot into our new kingdom, all our people gathered around and cheered joyfully. Everyone is joyfully looking towards our bright future."
  me_yue_tribes_1601.a: "Long live the descendants of Yu the Great!"
  
  me_yue_tribes_90_title: "The Fall Of The State Of Yue"
