--- a/localization/english/ti_treasures_l_english.yml
+++ b/localization/english/ti_treasures_l_english.yml
@@ -1,6 +1,5 @@
-﻿ l_english:
-# please note that most of the treasure loc is in 00_TODO_l_english.yml
-## Japonic Treasures
+﻿l_english:
+ ## Japonic Treasures
  samhantool:0 "Samhanic Bronze Plow"
  samhantool_desc:0 "Most tools from the Samhan period were made of iron. This excellent piece of mettalurgy is a testament to the development from Bronze to Iron."
  amaterasuart:0 "Ama-no-Iwato Tapestry"
@@ -44,3 +43,84 @@
  protodotaku_desc:0 "Dotaku were distinctive Yayoi religious bells. However, the Yayoi Dotaku bells came from inspiration from the Japonic Koreans, as well as the later Koreans and the Chinese. The 'Proto' Dotaku were much smaller and less rare due to higher abundance of the metals used to make them."
  amberspoon:0 "Amber Spoon"
  amberspoon_desc:0 "The demand for amber in Hokkaido would see Jomon chord-pottery traded being found prominently in Sakhalin in exchange for the precious sap-stone. Subsequently, many artisans became experts at crafting jewelry and precious items out of amber in Hokkaido."
+ 
+ # New Treasures
+
+ # ACB old
+ treasure_chuanguoyuxi:0 "Treasure"
+ treasure_chuanguoyuxi_desc:0 ""
+ treasure_liannuche:0 "Treasure"
+ treasure_liannuche_desc:0 ""
+ treasure_liannu:0 "Treasure"
+ treasure_liannu_desc:0 ""
+ treasure_zhuansheji:0 "Treasure"
+ treasure_zhuansheji_desc:0 ""
+ treasure_jiche:0 "Treasure"
+ treasure_jiche_desc:0 ""
+ treasure_fuhaoyue:0 "Treasure"
+ treasure_fuhaoyue_desc:0 ""
+
+ # TI new
+
+ bronzedragon1: "Bronze Dragon"
+ bronzedragon1_desc: "Carved out of bronze, this fearsome statue of a dragon inspires fear in the hearts of those that gaze upon it."
+ bronzedragon2: "Double-Headed Dragon"
+ bronzedragon2_desc: "A masterpiece of bronze statuary, the two-headed Dragon witnesses both past and future and is the master of both."
+ bronzedragon3: "Bronze Dragon Turtle"
+ bronzedragon3_desc: "This statue of a dragon with a turtle shell, its snarling jaws open, drives away evil spirits and brings religous concord to the masses."
+ bronzenao1: "Bronze Nao"
+ bronzenao1_desc: "A cylindrical drum, the Bronze Nao sounds a mellow note when struck."
+ bronzenao2: "Elephant Nao"
+ bronzenao2_desc: "This percussion instrument has a masterfully carved elephant on its side, its trunk raised towards the heavens."
+ bronzenao3: "Dragon Nao"
+ bronzenao3_desc: "This bronze drum has two dragons carved in relief on either side, their tails entwined."
+ chinaart1: "Silk Painting"
+ chinaart1_desc: "This impressive artwork, painted on a piece of the finest silk, shows a man riding a dragon."
+ chinaart2: "Rustic Painting"
+ chinaart2_desc: "A painting of life in a farming community, showing workers in the fields harvest rice."
+ chinascroll2: "Chu Silk Manuscript"
+ chinascroll2_desc: "A philosophical treatise, one that muses on the meaning of life and grapples with the inevitability of death."
+ chinaware1: "Crystal Chalice"
+ chinaware1_desc: "Carved from one solid piece of quartz, this cup is intended to accompany a deceased ruler into the Afterlife."
+ chinesepottery1: "Dragon-Handle Ceramic Vase"
+ chinesepottery1_desc: "This ornate ceramic urn is decorated with floral motifs and has a carved Dragon for a handle."
+ chinesepottery2: "Black Pottery Tray"
+ chinesepottery2_desc: "A serving tray intended for an Imperial Household, carved from the finest woods and embossed with black lacquer." 
+ chinesepottery3: "Enameled Pottery"
+ chinesepottery3_desc: "A dazzling geometric design swirls around this stylized serving dish, which is intended for ceremonial use."
+ chineseshield1: "Lacquered Hide Shield"
+ chineseshield1_desc: "This shield, made of buffalo leather that has been painted, is intended for ceremonial use."
+ chinesesword1: "Steel Sword of Chu"
+ chinesesword1_desc: "This magnificent blade was crafted by the master blacksmiths of Chu, who excel in crafting deadly weapons."
+ chinesesword2: "Steel Sword of Qin"
+ chinesesword2_desc: "This steel blade, built by the finest weaponsmiths in all of Qin, is of exceptional quality, with an edge that never seems to dull."
+ goldcup1: "Golden Cup"
+ goldcup1_desc: "Made entirely from the finest gold, this ceremonial cup is said to bring the blessings of the gods, who will seek to fill it up with gifts."
+ goldcup2: "Golden Chalice"
+ goldcup2_desc: "This drinking vessel was said to be taken from the grave of a long-forgotten warlord."
+ golddragon1: "Gold Dragon"
+ golddragon1_desc: "A dragon statue, carved entirely of gold and with two red rubies for eyes, that gleams like fire in the light."
+ jadeartifact2: "Jade Artifact"
+ jadeartifact2_desc: "A dazzling piece of jade that seems to glow with its own luminosity - a boon to researchers."
+ jadeartifact3: "Jade Artifact"
+ jadeartifact3_desc: "Once rumored to have belonged to an important bureacrat, this piece of jade feels especially heavy in the hand."
+ jadeartifact1: "Jade Artifact"
+ jadeartifact1_desc: "This piece of jade, which has been carefully carved with Hanzi, is purported to be of great antiquity."
+ lionstatue: "Lion Of Fo"
+ lionstatue_desc: "This statue of a fearsome lion, its gigantic paw resting on a ball, is beloved by the common people."
+ redbox1: "Red Lacquer Box"
+ redbox1_desc: "A finely-wrought chest, covered in red lacquer and decorated with swirling rustic motifs."
+ teapot1: "Bronze Teapot"
+ teapot1_desc: "Carved in the style of a simple clay teapot, yet made of bronze, this teapot is a reminder of our humble origins."
+ teapot2: "Ceramic Teapot"
+ teapot2_desc: "This ceramic teapot has a gorgeously-rendered image of a crane on its side."
+ teapot3: "Jade Teapot"
+ teapot3_desc: "A small ceremonial teapot, carved out of jade and decorated with Hanzi."
+ 
+ #Treasures
+ treasure_jiuding: "Treasure of Jiuding"
+ treasure_jiuding_desc: "Cast in bronze and requiring the strength of twenty men to move, the massive Cauldron of Jiuding exudes an aura of authority and stability."
+ treasure_suihouzhu: "Suihouzhu"
+ treasure_suihouzhu_desc: "According to legend, after saving the life of a serpent, the Marquis of Sui was gifted a magnificent pearl by the grateful creature."
+ treasure_heshibi: "Heshibi"
+ treasure_heshibi_desc: "A large piece of jade with a hole cut through its center, the Heshibi is a ceremonial artifact associated with the powers of royal authority."
