Dian and Sardinia Adjustments

--- a/localization/english/ti_countries_l_english.yml
+++ b/localization/english/ti_countries_l_english.yml
@@ -521,3 +521,11 @@
  PA8_ADJ: "Feltrinian"
  PA9: "Camunia"
  PA9_ADJ: "Camunian"
+ PB1: "Tibulatia"
+ PB1_ADJ: "Tibulatian"
+ PB2: "Nurrensia"
+ PB2_ADJ: "Nurrensian"
+ PB3: "Carensia"
+ PB3_ADJ: "Carensian"
+ PB4: "Valentinia"
+ PB4_ADJ: "Valentinian"
