Minor Fix for Xiongnu #2

--- a/localization/english/missions/xiongnu_missions_2_l_english.yml
+++ b/localization/english/missions/xiongnu_missions_2_l_english.yml
@@ -172,7 +172,7 @@
  #Tooltips
  xiongnu_missions_2_task_6_modun_dead: "Modun has died."
  xiongnu_missions_2_task_6_laoshang_not_ruler: "Laoshang is not yet our ruler."
- xiongnu_missions_2_task_8_blacksmith_on_gold: "We have at least one province with the blacksmith building and the precious metals trade good."
+ xiongnu_missions_2_task_8_blacksmith_on_gold: "We have at least one province with the blacksmith building."
  xiongnu_missions_2_task_11_artist: "We own at least one province with an artist."
  is_in_you_bing_yong_region: "We have at least 25 provinces, which are either in the Region of You, Bing or Yong."
  any_chinese_subject: "We have at least one subject with Chinese culture."
