almost done, have to go, but literally almost done

--- a/localization/english/missions/jomon_missions_l_english.yml
+++ b/localization/english/missions/jomon_missions_l_english.yml
@@ -74,7 +74,7 @@
  peaceful_uni_ktm_tt:0 "#E Kitami#! has an opinion of #E [SCOPE.GetRootScope.GetCountry.GetName|Y]#! greater than #G 190#!."
  kamuy_mintara_tt:0 "The #Y Impassible#! changes name to #Y Kamuy-Mintara#!."
  kamuy_mintara_2_tt:0 "The #Y Kamuy-Mintara#! deity has been #G unlocked#!."
- unlock_jomon_tree_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gains claims over the areas of #Y [GetProvince('(int32)10561').GetArea.GetName]#!, #Y [GetProvince('(int32)9731').GetArea.GetName]#!, #Y [GetProvince('(int32)9711').GetArea.GetName]#!, #Y [GetProvince('(int32)9732').GetArea.GetName]#!, and #Y [GetProvince('(int32)9716').GetArea.GetName]#!"
+ unlock_jomon_tree_tt:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] gains claims over the areas of #Y [GetProvince('(int32)10561').GetArea.GetName]#!, #Y [GetProvince('(int32)9731').GetArea.GetName]#!, #Y [GetProvince('(int32)9711').GetArea.GetName]#!, #Y [GetProvince('(int32)9732').GetArea.GetName]#!, and #Y [GetProvince('(int32)9716').GetArea.GetName]#!.\nIf we form #E Jomon#! we will gain access to a new #E Mission Tree#!"
  me_ezo_801_susuya_response:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] remains an autonomous entity."
  me_ezo_801_susuya_response_good:0 "[SCOPE.GetRootScope.GetCountry.GetName|E] will become a #Y Trade Colony#! of the #E Ezo#!."
  susuya_subject_tt:0 "#E Susuya#! becomes a #Y Trade Colony#! of [SCOPE.GetRootScope.GetCountry.GetName|E]."
