--- a/localization/english/provincenames_l_english.yml
+++ b/localization/english/provincenames_l_english.yml
@@ -10077,7 +10077,6 @@
  PROV1826_hellenic:0 "Pteria Pontike"
  PROV1827_hellenic:0 "Sakorsa"
  PROV1828_hellenic:0 "Domanion"
- PROV1829_hellenic:0 "1829" # !!
  PROV1830_hellenic:0 "Lindos"
  PROV1831_hellenic:0 "Pimolisene"
  PROV1832_hellenic:0 "Saralos"
@@ -14371,7 +14370,7 @@
  PROV2240_roman:0 "Lapurdum"
  PROV2243_roman:0 "Aquae Tarbellicae"
  PROV2248_roman:0 "Novum Oppidum"
- PROV2251_roman:0 "Telonnum"
+ PROV2251_roman:0 "Aquae Convenarum"
  PROV2250_roman:0 "Vicus Iulii"
  PROV2252_roman:0 "Lugdunum Convenarum"
  PROV2253_roman:0 "Lugdunum Consoranorum"
