zhhou loc done elala

--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -206,13 +206,13 @@
  
  me_zhou_1702_title:0 "$zhou_missions_task_17$: Research Management"
  me_zhou_1702_desc:0 "Our #E Royal Inspectors#! have decreed that the working time for our #E Citizens#! in research should be increased. They will do this by making sure no one is skipping time. However, this will undoubtedly cause some unrest amongst our citizens. Should we go through with this management still?"
- me_zhou_1702.a:0 "We will make sure they are up to part, but no more."
- me_zhou_1702.b:0 ""
+ me_zhou_1702.a:0 "We will make sure they are up to par, but no more."
+ me_zhou_1702.b:0 "We wil push them to their limits!"
  
- me_zhou_1703_title:0 ""
- me_zhou_1703_desc:0 ""
- me_zhou_1703.a:0 ""
- me_zhou_1703.b:0 ""
+ me_zhou_1703_title:0 "$zhou_missions_task_17$: Dread of Taxes"
+ me_zhou_1703_desc:0 "The general populace has been found skipping many taxes. The #E Royal Inspectors#! suggest adding in more taxation methods in order to more efficiently collect them. However, this would leave the populace quite upset, having grown used to the current taxation methods. Regardless, more efficient taxation yields us results, but if we take into account the #E Inspectors#! suggetions, we could make even more in the longrun."
+ me_zhou_1703.a:0 "We will settle for efficient tax collection."
+ me_zhou_1703.b:0 "Let's implement these suggestions."
 
  me_zhou_18_title:0 "$zhou_missions_task_18$"
  me_zhou_18_desc:0 "Our state's laws have improved and adapted with time. It is an achievement that speaks to both our political ingenuity, as well as our legacy and experience in ruling this ancient land of #E China#!. This will also help to make sure we never again collapse into #E Warring States#!, as it will surely be against the law to do so!"
