--- a/localization/english/missions/colchis_missions_l_english.yml
+++ b/localization/english/missions/colchis_missions_l_english.yml
@@ -530,7 +530,8 @@ suani_republic_league_city_name:0 "The Republic of Dioscurias"
 suani_republic_league_city_adj:0 "Dioscurian"
 suani_rebellion_name:0 "Svan Kingdom"
 suani_rebellion_adj:0 "Svan"
-suanian_adjective: "Svanian"
+suania_adjective: "Svanian"
+ABASGIA_ADJECTIVE: "Abasgian"
 
 SAERISTAVO_OF_COLCHIS:0 "Saeristavo of Egrisi"
 KINGDOM_OF_COLCHIS:0 "Kingdom of Colchis"
