--- a/localization/english/missions/yue_state_missions_l_english.yml
+++ b/localization/english/missions/yue_state_missions_l_english.yml
@@ -209,6 +209,7 @@
  restored_yue_state: "Restoration of the State of Yue"
  yue_learnt_from_generosity: "Learnt from Past Mildness"
  langyayue_naval_dominance: "Naval Dominance of the Yue"
+ yue_tribal_capital: "New Yue Capital"
  desc_restored_kuaiji_mod: "Prosperity has returned to the capital of the Yue."
  desc_yue_found_allies: "Our newly found allies are supporting us with their troops."
  desc_yue_state_bronze_swords: "The Yue people have always been renowned for the quality of their bronze swords."
@@ -219,6 +220,7 @@
  desc_restored_yue_state: "The last time the state of Yue was prosperous like this was during the reign of king Goujian which ended in 465 BCE."
  desc_yue_learnt_from_generosity: "We have learnt from past unwarranted generosity. Never show generosity to those that do not deserve it."
  desc_langyayue_naval_dominance: "What sets us apart from the other nations of the Chinese plains is our strong navy."
+ desc_yue_tribal_capital: "This city has ascended its tribal days."
  
  #################
  #Langyayue Delta#
