--- a/localization/english/missions/zhongshan_missions_l_english.yml
+++ b/localization/english/missions/zhongshan_missions_l_english.yml
@@ -157,6 +157,8 @@
  zhongshan_missions_task_12_claims: "We will get claims on the Region of Ji and the Area of Hedong."
  zhongshan_missions_task_14_claims: "We will get claims on the Regions of Shuofang and Modong."
  zhongshan_missions_task_16_claims: "We will get claims on the Regions of Yong and Yu."
+ zhongshan_missions_task_6_heir: "Our #Y heir#! is an #Y unmarried adult#! with the #Y Zhongshan bloodline#!."
+ zhongshan_missions_task_6_woman: "We have at least one #Y marriageable woman#! with the #Y Zhongshan bloodline#!."
  
  #Treasures
  zhongshan_funerary_items: "Zhongshan Funerary Items"
