--- a/localization/english/missions/zhou_missions_l_english.yml
+++ b/localization/english/missions/zhou_missions_l_english.yml
@@ -271,7 +271,7 @@
  me_zhou_90.a:0 "And so unite them we will."
 
  #Tooltips
- zhou_employer_is_target_employer_tt: "[ROOT.GetCountry.GetRuler.GetName] has at least one #Y Friend#! in #Y [GetCountry('WEI').GetName]#! (must not be a #Y Close Relative#! of [GetCountry('WEI').GetRuler.GetName], #Y Master of the Guard#!, or #Y Bodyguard#!)."
+ zhou_employer_is_target_employer_tt: "Our ruler has at least one #Y Friend#! in #Y [GetCountry('WEI').GetName]#! (must not be a #Y Close Relative#! of [GetCountry('WEI').GetRuler.GetName], #Y Master of the Guard#!, or #Y Bodyguard#!)."
  zhou_missions_task_17_officers_have_8_in_main_attribute: "Our Chancellor, Marshal, Court Philosopher and Steward have a skill of at least 8 in their primary attribute."
  zhou_missions_task_20_loyal_governors_generals_officers: "We have no governor, general or officer with a loyalty below 70."
  zhou_missions_task_20_decide_governance: "We will be able to decide whether we want to centralize or decentralize our territory."
@@ -279,13 +279,16 @@
  zhou_missions_task_2_claims: "Gain claims on [GetProvince('(int32)8384').GetArea.GetName|Y], [GetProvince('(int32)8393').GetArea.GetName|Y], [GetProvince('(int32)8958').GetArea.GetName|Y], and [GetProvince('(int32)8407').GetArea.GetName|Y]."
  zhou_missions_task_4_claims: "Gain claims on the territories of [GetCountry('SNG').GetName|Y]."
  zhou_missions_task_6_claims: "Gain claims on [GetProvince('(int32)8316').GetArea.GetName|Y], [GetProvince('(int32)8329').GetArea.GetName|Y], [GetProvince('(int32)8340').GetArea.GetName|Y], [GetProvince('(int32)8360').GetArea.GetName|Y], and [GetProvince('(int32)8285').GetArea.GetName|Y]."
- zhou_missions_task_6_claims_2: "TODO CLAIMS"
+ zhou_missions_task_6_claims_2: "Gain claims on the territories of [GetCountry('ZHA').GetName|Y]."
  zhou_missions_task_7_claims: "Gain claims on the [GetProvince('(int32)8509').GetArea.GetRegion.GetName|Y]"
  zhou_missions_task_8_claims: "Gain claims on the territories of [GetCountry('CHU').GetName|Y]\nGain claims on the [GetProvince('(int32)8983').GetArea.GetRegion.GetName|Y]"
  zhou_missions_task_10_claims: "Gain claims on [GetProvince('(int32)8254').GetArea.GetName|Y], [GetProvince('(int32)8271').GetArea.GetName|Y], [GetProvince('(int32)8566').GetArea.GetName|Y], and [GetProvince('(int32)8577').GetArea.GetName|Y]."
  zhou_missions_task_11_claims: "Gain claims on the [GetProvince('(int32)8722').GetArea.GetRegion.GetName|Y]"
  me_zhou_20_annex_all: "We will annex all of our Chinese subjects, thereby upsetting the local population."
  zhou_missions_task_6_challenge_zhao_for_throne: "Our champion will challenge the ruler of Zhao to a duel that will decide the fate of Zhao."
+ zhou_missions_task_3_woman: "We have at least one #Y marriageable woman#! with the #Y Zhou bloodline#!."
+ zhou_missions_task_5_man: "We have at least one #Y adult man#! who is neither our primary heir nor our ruler with the #Y Zhou bloodline#!."
+ zhou_missions_task_6_man: "We have at least one #Y adult man#! who is neither our primary heir nor our ruler with the #Y Zhou bloodline#! and a #Y martial skill#! of at least 10."
  
  #Modifiers
  zhou_agriculture_mod: "Agricultural Advancements"
