--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
- succession_laws:1 "Succession Laws" 
+ succession_law:1 "Succession Laws" 
    agnatic_succession_law:0 "Agnatic Primogeniture"
    agnatic_succession_law_desc:0 "Agnatic succession dictates that the eldest male child always inherits the throne. This is a simple and ancient system, but can often result in young monarchs, bloody politics, and a lack of viable successors."
    cognatic_succession_law:1 "Agnatic-Cognatic"
@@ -9,6 +9,10 @@
    agnatic_seniority_succession_law_desc:0 "Agnatic Seniority is rarer form of patrilineal succession, in which the reigning monarch's younger brothers are higher in the order of succession than his sons. This can often result in huge webs of rivalry and myriad claimants to the throne."
    egyption_succession_law:1 "Familial Marriage"
    egyption_succession_law_desc:1 "In this manner of succession, the eldest child of the ruler will be the primary heir, regardless of gender. In order to secure a strong, legitimate bloodline, however, it becomes commonplace for royal siblings to intermarry, thus avoiding any chance for the lineage to be sullied."
+ assembly_laws_monarchy:0 "Royal Council"
+
+
+
  election_laws_republic:0 "Election Laws"
    election_law_1_rep:1 "Electoral Model"
    election_law_1_rep_desc:0 "Designed to ensure fairness and equal representation, this model of the electoral system is held in high regard."
