first pass of law loc

--- a/localization/english/military_traditions_l_english.yml
+++ b/localization/english/military_traditions_l_english.yml
@@ -900,3 +900,5 @@
  light_cavalry_steppes_combat_bonus:0 "Light Cavalry Steppes Combat Bonus"
  heavy_cavalry_steppes_combat_bonus:0 "Heavy Cavalry Steppes Combat Bonus"
  horse_archers_steppes_combat_bonus:0 "Horse Archers Steppes Combat Bonus"
+
+ tetrere_cost: "Tetrere Cost"
