--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -38,3 +38,35 @@ economic_laws_rom:0 "Taxation Collection"
    economic_law_2_rom_desc:0 ""
    economic_law_3_rom:0 "Publicani"
    economic_law_3_rom_desc:0 "Publicani Corruption"
+
+   no_term_delay: "No Term Delay"
+   no_term_delay_desc: "Despite the machinations and the efforts of the Senators to delay elections in a naked attempt to hold onto their power, terms in our Republic will not be delayed."
+
+   tax_laws_rom: "Roman Tax Law"
+   tax_law_1_rom: "Civil Tributum"
+   tax_law_1_rom_desc: "If we reduce the burden of the taxes upon the upper classes, then our nobles will be enthusiastic participants in the business of running a Republic."
+   tax_law_2_rom: "Tributum Soli"
+   tax_law_2_rom_desc: "We should focus our energies upon the productive and fertile lands within our Republic - let the slaves work harder to generate wealth."
+   tax_law_3_rom: "Publicani"
+   tax_law_3_rom_desc: "By entrustring contractors known as 'publicani' with the authority to conduct business with the State, we shall all make money while reducing our workload." 
+   tax_law_4_rom: "Augustan Reforms"
+   tax_law_4_rom_desc: "The time has come to overhaul all of the basic functions of our Republic; we must examine every aspect of our bureaucratic apparatus to ensure that it is operating efficiently."
+   tax_law_5_rom: "Bureaucratic Taxation"
+   tax_law_5_rom_desc: "The wealthier elements within our society could certainly do more than they currently do to support our Republic, and we must coerce them into paying more taxes."
+
+   naval_law_2_rom: "Punic Reforms"
+   naval_law_2_rom_desc: "By focusing our military efforts on naval supremacy, we will dominate all rivals that seek to challenge our power at home and abroad."
+   naval_law_5_rom: "Mare Nostrum"
+   naval_law_5_rom_desc: "As a regional powerbroker that is able to project strength far beyond our borders, we must invest in a navy to ensure that we are not challenged upon the waters."
+
+   military_law_5_rom: "Caesarian Reforms"
+   military_law_5_rom_desc: "Not only must we invest in the creation of #Y Legions#! throughout our Republic, but we must also ensure that these troops are well-trained and that our defenses are prepared."
+
+   trade_laws_rom: "Roman Trade Law"
+   trade_law_1_rom: "Portorium"
+   trade_law_1_rom_desc: "Although some of the merchants will undoubtedly complain, we will enact tariffs on goods that arrive in our markets."
+   trade_law_2_rom: "Provincial Rhetors"
+   trade_law_2_rom_desc: "We will send, at State expense, master orators and rhetoricians to the provinces in order to tutor the local nobility."
+   trade_law_4_rom: "Lex Caecilia de Vectigalibus"
+   trade_law_4_rom_desc: "Because of the greed and corruption of the tax collectors within our ports, we will abolish tariffs on goods that arrive by sea."
+
