--- a/localization/replace/laws_l_english.yml
+++ b/localization/replace/laws_l_english.yml
@@ -498,7 +498,7 @@ republican_religious_laws_rom: "Mos Maiorum"
     lex_aelia_et_fufia_desc: "A niche, but important law, the Lex Aelia et Fufia put an end to the practice of unfavorable omens ending political discussion. This limited the power of those responsible for taking the omens, allowing for more equal political discourse."
     lex_domitia_de_sacerdotiis: "Lex Domitia de Sacerdotiis"
     lex_domitia_de_sacerdotiis_desc: "This law took the responsibility of appointing the Pontifex Maximus firmly out of the hands of the college of priests; resulting in the senate wielding greater power over state religion."
-subject_laws_rom: "Ius Foederis"
+subject_laws_rome: "Ius Foederis"
     subject_law_1_rom: "Friends of Rome"
     subject_law_2_rom: "Permanent Ambassadors"
     subject_law_3_rom: "Total Dominance"
@@ -560,7 +560,7 @@ slave_laws_rom: "Ius Gentium"
     lex_fufia_caninia_desc: "A simple limitation of the ratio of owned to freed slaves that any man might possess, ensured that the a slave economy was still viable in the late Republic."
     lex_aelia_sentia: "Lex Aelia Sentia"
     lex_aelia_sentia_desc: "The manumission of slaves became so increasingly prevalent in Rome, that a law was enacted to put limitations on how manumitted slaves were to act, and what heights they might climb to by denying freed slaves the right of citizenship."
-grain_laws_rep: "Leges Frumentaria"
+grain_laws_rom: "Leges Frumentaria"
     grain_law_1_rom: "Ad-Hoc Intervention"
     lex_sempronia_frumentaria: "Lex Sempronia Frumentaria"
     lex_terentia_cassia: "Lex Terentia et Cassia"
@@ -570,7 +570,7 @@ grain_laws_rep: "Leges Frumentaria"
     grain_law_2_rep_desc: "In 123 BC, Gaius Sempronius Gracchus proposed a law to purchase sicilian grain to be sold at a controlled price at the states expense."
     lex_terentia_cassia_desc: "Passed in 73 BC by Gaius Cassius Longinus, the State had to buy wheat in Sicily and resell it at a low price in Rome."
     lex_clodia_desc: "Passed by annoyingly radical Clodius in 58 BC, the grain set aside for lower prices for poor citizens was now free. Good luck repealing this one."
-    grain_law_5_rep_desc: "Guys literally only want two things and it's disgusting"
+    grain_law_5_rom_desc: "Guys literally only want two things and it's disgusting"
 #######
 
 
