--- a/localization/replace/laws_l_english.yml
+++ b/localization/replace/laws_l_english.yml
@@ -387,7 +387,7 @@ grain_laws_rep: "Grain Laws"
 #######
 ##ROME
 #######
-republic_election_reforms_rom: "Leges Annalis"
+republic_election_reforms_rom: "Leges Annalii"
     leges_genuciae: "Leges Genuciae"
     leges_genuciae_desc: "The Genucian laws had a variety of errata, however, the keystone tenets held that any politician was forbidden from possessing more than one office simultaenously, and furthermore, that at least 10 years must have passed after the date of his first election, until a magistrate was able to hold the same office again."
     senatus_consultum_ultimum: "Consultum Ultimum"
@@ -516,7 +516,7 @@ republic_integration_laws_rom: "Ius Belli"
     integration_law_3_rom_desc: ""
     integration_law_4_rom_desc: ""
     integration_law_5_rom_desc: "Dividing provinces into imperial and senatorial provinces."
-republican_land_reforms_rom: "Leges Agraria"
+republican_land_reforms_rom: "Leges Agrariae"
     cassian_reform: "Cassian Reform"
     cassian_reform_desc: "The Cassian reform was passed in the early days of the republic, setting the stage for Roman policy for years to come. By seizing all conquered land acquired during conquest, and selling it to wealthy patricians, war became a lucrative business."
     lex_servilia_glaucia: "Lex Servilia Glaucia"
@@ -532,16 +532,16 @@ judicial_laws_rom: "Ius Privatum"
     lex_aternia_desc: "Enabling magistrates to impose fines upon nobles and citizens was an early, but effective way of limiting the power of the nobility. Fines in the early republic were levied in livestock, but later amended to require payment in bronze, as stipulated by the Lex Julia Papiria."
     judicial_law_2_rom: "Lex Aquilia"
     judicial_law_3_rom: "Lex Cassia Tabellaria"
-    lex_porcia: "Leges Porcia"
+    lex_porcia: "Leges Porciae"
     judicial_law_5_rom: "Lex Aurelia"
     judicial_law_2_rom_desc: "Passed in 286 BC, the lex Aquilia de damno provided compenstation to the owners of property injured by someones fault; basic tort reform."
     judicial_law_3_rom_desc: "Passed in 137 BC, the Lex Cassia tabellaria introduced secret votes in court jury decisions"
     lex_porcia_desc: "Passed in 199 BC, the Lex Porcia gave the right of appeal in capital cases. In 195 and 185 BC, further laws were passed to extend the right of appeal and ensure that magistrates continued to recognize this right."
     judicial_law_5_rom_desc: "Passed in 70 BC, the Lex Aurelia iudiciaria stipulted that Juries should be chosen from senators, equites and tribuni aerarii."
-roman_corruption_laws: "Leges Ambitu"
+roman_corruption_laws: "Leges Ambiti"
     corruption_law_1_rom: "Lex Sacrata"
     corruption_law_2_rom: "Lex Ovinia"
-    corruption_law_3_rom: "Leges Baebia"
+    corruption_law_3_rom: "Leges Baebiae"
     lex_cassia_de_senatu: "Lex Cassia de Senatu"
     corruption_law_5_rom: "Lex Acilia Calpurnia"
     corruption_law_1_rom_desc: "One of the oldest of Roman laws, this law affirmed the sancrosactity of tribunes."
@@ -560,14 +560,14 @@ slave_laws_rom: "Ius Gentium"
     lex_fufia_caninia_desc: "A simple limitation of the ratio of owned to freed slaves that any man might possess, ensured that the a slave economy was still viable in the late Republic."
     lex_aelia_sentia: "Lex Aelia Sentia"
     lex_aelia_sentia_desc: "The manumission of slaves became so increasingly prevalent in Rome, that a law was enacted to put limitations on how manumitted slaves were to act, and what heights they might climb to by denying freed slaves the right of citizenship."
-grain_laws_rom: "Leges Frumentaria"
+grain_laws_rom: "Leges Frumentariae"
     grain_law_1_rom: "Ad-Hoc Intervention"
     lex_sempronia_frumentaria: "Lex Sempronia Frumentaria"
     lex_terentia_cassia: "Lex Terentia et Cassia"
     lex_clodia: "Lex Clodia Frumentaria"
-    grain_law_5_rep: "Bread and Circus"
-    grain_law_1_rep_desc: "In times of desperation, it is our duty to ensure nominal aid."
-    grain_law_2_rep_desc: "In 123 BC, Gaius Sempronius Gracchus proposed a law to purchase sicilian grain to be sold at a controlled price at the states expense."
+    grain_law_5_rom: "Bread and Circus"
+    grain_law_1_rom_desc: "In times of desperation, it is our duty to ensure nominal aid."
+    grain_law_2_rom_desc: "In 123 BC, Gaius Sempronius Gracchus proposed a law to purchase sicilian grain to be sold at a controlled price at the states expense."
     lex_terentia_cassia_desc: "Passed in 73 BC by Gaius Cassius Longinus, the State had to buy wheat in Sicily and resell it at a low price in Rome."
     lex_clodia_desc: "Passed by annoyingly radical Clodius in 58 BC, the grain set aside for lower prices for poor citizens was now free. Good luck repealing this one."
     grain_law_5_rom_desc: "Guys literally only want two things and it's disgusting"
