--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -1,72 +1,24 @@
-﻿l_english:
+l_english:
 
- succession_law:1 "Succession Laws" 
-   agnatic_succession_law:0 "Agnatic Primogeniture"
-   agnatic_succession_law_desc:0 "Agnatic succession dictates that the eldest male child always inherits the throne. This is a simple and ancient system, but can often result in young monarchs, bloody politics, and a lack of viable successors."
-   cognatic_succession_law:1 "Agnatic-Cognatic"
-   cognatic_succession_law_desc:0 "The priciple of cognatic succession, is to allow female children of a monarch to succeed to the throne, if there are no valid male heirs. This can affect the perceived legitimacy of a dynasty, but will greatly decrease the chances of a failed succession."
-   agnatic_seniority_succession_law:0 "Agnatic Seniority"
-   agnatic_seniority_succession_law_desc:0 "Agnatic Seniority is rarer form of patrilineal succession, in which the reigning monarch's younger brothers are higher in the order of succession than his sons. This can often result in huge webs of rivalry and myriad claimants to the throne."
-   egyption_succession_law:1 "Familial Marriage"
-   egyption_succession_law_desc:1 "In this manner of succession, the eldest child of the ruler will be the primary heir, regardless of gender. In order to secure a strong, legitimate bloodline, however, it becomes commonplace for royal siblings to intermarry, thus avoiding any chance for the lineage to be sullied."
- assembly_laws_monarchy:0 "Royal Council"
+#inventions
+
+#civic
+civic_construction_inv_1: "Basic Mathematics"
+civic_construction_inv_1_desc: "Using basic mathematics, construction becomes much easier."
+civic_construction_inv_2: "Advanced Mathematics"
+civic_construction_inv_2_desc: "Architecture is merely applied trigonometry."
+civic_construction_inv_3: "Cranes"
+civic_construction_inv_3_desc: "The use of cranes allows for huge buildings to be constructed much faster. Large walls also increease our defensiveness."
+civic_construction_inv_1: "Basic Mathematics"
+civic_construction_inv_1_desc: "Using basic mathematics, construction becomes much easier."
+civic_duty_inv: "Civic Duty"
+civic_duty_inv_desc: "A sense of civic duty in our nobles to invest in society will increase the lot of our poorer citizens and help our nation thrive."
+civic_education_inv_1: "Private Tutors"
+civic_education_inv_1_desc: "A pool of private tutors in our realm that increases the education of the nobility increases the chances of scientific breakthroughs."
+civic_education_inv_2: "Public Education"
+civic_education_inv_2_desc: "Investing in our upper class children in literacy and rhetoric will empower our citizens culturally, socially, and mentally
 
 
 
- election_laws_republic:0 "Election Laws"
-   election_law_1_rep:1 "Electoral Model"
-   election_law_1_rep_desc:0 "Designed to ensure fairness and equal representation, this model of the electoral system is held in high regard."
-   election_law_2_rep:0 "Extended Terms"
-   election_law_2_rep_desc:0 "Sometimes, one term is just not enough for our great leaders to achieve what they set out to do. It has become clear that we must consider extending their tenure, that we might reap the benefits of our benign leader's wisdom."
-   election_law_3_rep:0 "Shortened Terms"
-   election_law_3_rep_desc:0 "It has become clear that power promotes the worst aspects of mankind. In an effort to combat this creeping corruption, we should reduce the electoral term, ensuring that no one man wields power for too long."
-   election_law_4_rep:0 "Lifetime Elections"
-   election_law_4_rep_desc:0 "Our noble leader has proven a success at every turn. By the will of the people, we should safeguard our very future by rewarding this titan of politics with lifetime dictatorship!"
- election_laws_rome:0 "Election Laws"
-   election_law_1_rom:0 "Leges Genuciae"
-   election_law_1_rom_desc:0 "The Genucian laws had a variety of errata, however, the keystone tenets held that any politician was forbidden from possessing more than one office simultaenously, and furthermore, that at least 10 years must have passed after the date of his first election, until a magistrate was able to hold the same office again."
-   election_law_1_rom:0 "Consultum Ultimum"
-   election_law_1_rom_desc:0 "Intended to safeguard the republic in times of desperate need, the 'Final Decree of the Senate', was a reform of the older system of dictatorship, whereby one man would receive absolute authority over matters of state. This backfired disastrously when the senate invoked this decree against Caesar, who, ironically, claimed to view the decree as proof that republican ideals were in danger of being overthrown."
-   lex_antonia:0 "Lex Antonia"
-   lex_antonia_desc:0 "Proposed by Mark Antony, in the aftermath of Caesar's assassination, this law aimed to abolish dictatorship altogether, though was ultimately unsuccessful; perhaps paving the way for the dawn of the Empire."
-   princeps_civitatis:0 "Princeps Civitatis"
-   princeps_civitatis_desc:0 "After the bitter Triumvirate conflicts, the adopted son of Caesar, Gaius Octavius, later known as the first Emperor of Rome, reformed the very nature of the republic. Whilst in practice he held authoritarian control over a state in turmoil, he referred to himself as Princeps Civitatis, or, 'First Citizen', as he set about creating the legal framework for an empire that spanned nearly 500 years."
-economic_laws_rom:0 "Taxation Collection"
-   economic_law_1_rom:0 "War Taxes"
-   economic_law_1_rom_desc:0 ""
-   economic_law_2_rom:0 "Land Taxes"
-   economic_law_2_rom_desc:0 ""
-   economic_law_3_rom:0 "Publicani"
-   economic_law_3_rom_desc:0 "Publicani Corruption"
 
-   no_term_delay: "No Term Delay"
-   no_term_delay_desc: "Despite the machinations and the efforts of the Senators to delay elections in a naked attempt to hold onto their power, terms in our Republic will not be delayed."
-
-   tax_laws_rom: "Roman Tax Law"
-   tax_law_1_rom: "Civil Tributum"
-   tax_law_1_rom_desc: "If we reduce the burden of the taxes upon the upper classes, then our nobles will be enthusiastic participants in the business of running a Republic."
-   tax_law_2_rom: "Tributum Soli"
-   tax_law_2_rom_desc: "We should focus our energies upon the productive and fertile lands within our Republic - let the slaves work harder to generate wealth."
-   tax_law_3_rom: "Publicani"
-   tax_law_3_rom_desc: "By entrustring contractors known as 'publicani' with the authority to conduct business with the State, we shall all make money while reducing our workload." 
-   tax_law_4_rom: "Augustan Reforms"
-   tax_law_4_rom_desc: "The time has come to overhaul all of the basic functions of our Republic; we must examine every aspect of our bureaucratic apparatus to ensure that it is operating efficiently."
-   tax_law_5_rom: "Bureaucratic Taxation"
-   tax_law_5_rom_desc: "The wealthier elements within our society could certainly do more than they currently do to support our Republic, and we must coerce them into paying more taxes."
-
-   naval_law_2_rom: "Punic Reforms"
-   naval_law_2_rom_desc: "By focusing our military efforts on naval supremacy, we will dominate all rivals that seek to challenge our power at home and abroad."
-   naval_law_5_rom: "Mare Nostrum"
-   naval_law_5_rom_desc: "As a regional powerbroker that is able to project strength far beyond our borders, we must invest in a navy to ensure that we are not challenged upon the waters."
-
-   military_law_5_rom: "Caesarian Reforms"
-   military_law_5_rom_desc: "Not only must we invest in the creation of #Y Legions#! throughout our Republic, but we must also ensure that these troops are well-trained and that our defenses are prepared."
-
-   trade_laws_rom: "Roman Trade Law"
-   trade_law_1_rom: "Portorium"
-   trade_law_1_rom_desc: "Although some of the merchants will undoubtedly complain, we will enact tariffs on goods that arrive in our markets."
-   trade_law_2_rom: "Provincial Rhetors"
-   trade_law_2_rom_desc: "We will send, at State expense, master orators and rhetoricians to the provinces in order to tutor the local nobility."
-   trade_law_4_rom: "Lex Caecilia de Vectigalibus"
-   trade_law_4_rom_desc: "Because of the greed and corruption of the tax collectors within our ports, we will abolish tariffs on goods that arrive by sea."
 
