Civic inventions loc complete

--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -9,14 +9,40 @@ civic_construction_inv_2: "Advanced Mathematics"
 civic_construction_inv_2_desc: "Architecture is merely applied trigonometry."
 civic_construction_inv_3: "Cranes"
 civic_construction_inv_3_desc: "The use of cranes allows for huge buildings to be constructed much faster. Large walls also increease our defensiveness."
-civic_construction_inv_1: "Basic Mathematics"
-civic_construction_inv_1_desc: "Using basic mathematics, construction becomes much easier."
+civic_construction_inv_4: "Concrete"
+civic_construction_inv_4_desc: "Although extensively used by the Romans, concrete was found in many places prior to 300 BC. Evidence of concrete is found in Greece dating all the way back to 1200 BC, and an Assyrian aqueduect dated to 688 BC utilized water proof concrete. By 800, lime mortars were used in construction in Greece and Crete."
 civic_duty_inv: "Civic Duty"
 civic_duty_inv_desc: "A sense of civic duty in our nobles to invest in society will increase the lot of our poorer citizens and help our nation thrive."
 civic_education_inv_1: "Private Tutors"
 civic_education_inv_1_desc: "A pool of private tutors in our realm that increases the education of the nobility increases the chances of scientific breakthroughs."
 civic_education_inv_2: "Public Education"
-civic_education_inv_2_desc: "Investing in our upper class children in literacy and rhetoric will empower our citizens culturally, socially, and mentally
+civic_education_inv_2_desc: "Investing in our upper class children in literacy and rhetoric will empower our citizens culturally, socially, and academically."
+civic_education_inv_3: "Extend Public Education"
+civic_education_inv_3_desc: "Setting aside funds from tax harvest to invest in the literacy of our empire will ensure opportunities our citizens were not previously privy to."
+civic_education_inv_4: "Orphanages"
+civic_education_inv_4_desc: "state sponsored orphanges decreases the chance of children left behind to fend for themselves in this cruel world we live in."
+land_surveyor_inv: "Land Surveyors"
+land_surveyor_inv_desc: "State appointed land surveys will give us the ability to properly assort land and determine its value for tax purposes."
+office_inv: "Hierachy of Office"
+office_inv_desc: "A ranking of office holders couples with a set path to achieve prominence in our government streamlines the chaotic mess of those clamouring for titles and prominence."
+civic_gov_inv_1: "Meritocratic Governors"
+civic_gov_inv_1_desc: "Governorship is a privilege, not a right. Our administration must implement a rigorous selection process to ensure quality administrators."
+civic_gov_inv_2: "Friends in High Places"
+civic_gov_inv_2_desc: "It is through the support of the nobles that we rule. Giving them power over our distant provinces will ensure their loyalty... we hope."
+global_goods_from_slaves_inv_2: "Slave Plantations"
+global_goods_from_slaves_inv_2_desc: "Using slaves as field workers for valuable foods and luxury goods will be very profitable indeed."
+civic_foreign_inv_1: "Rights for Foreigners"
+civic_foreign_inv_1_desc: "Nominal rights for conquered peoples will give them some sort of legal recourse under our regime... if nothing else but to lessen the headache from their whining."
+civic_foreign_inv_2: "Cultural Administration"
+civic_foreign_inv_2_desc: "The primacy of our culture within our empire is what makes us great. The peoples under our administration must assimilate if they wish to get ahead."
+civic_foreign_inv_3: "Diverse Administration"
+civic_foreign_inv_3_desc: "Alexander the Great once stated that he prized meritocracy regardless of culture. Rather than limit the influence of our subjects, we should embrace their smartest and most capable and integrate them into our administration."
+
+
+
+
+
+
 
 
 
