Martial inv loc started

--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -37,10 +37,27 @@ civic_foreign_inv_2: "Cultural Administration"
 civic_foreign_inv_2_desc: "The primacy of our culture within our empire is what makes us great. The peoples under our administration must assimilate if they wish to get ahead."
 civic_foreign_inv_3: "Diverse Administration"
 civic_foreign_inv_3_desc: "Alexander the Great once stated that he prized meritocracy regardless of culture. Rather than limit the influence of our subjects, we should embrace their smartest and most capable and integrate them into our administration."
-
-
-
-
+#martial
+martial_unit_inv: "Unit Cohesion"
+martial_unit_inv: "Reordering the our sub units to be more cohesive and flexible can determine the outcome of battle."
+greek_unit_inv: "Supporting Auxiliaries"
+greek_unit_inv: "The phalanx is strong, but tactically inflexible. By integrating flexible auxiliaries in concert with the bulky phalanx, the army as a whole will be superior."
+martial_unit_inv_2: "Standardized Units"
+martial_unit_inv_2: "As our empire grows, so does our army. To ease its management, a standardization of units is far more efficient than a vast diversity of specialized units."
+chinese_steel_inv: "Chinese Steel"
+chinese_steel_inv: "The Ancient Chinese peoples made steel by mixing cast iron and wrought iron, a method that was rediscovered in Europe in 1863 in Germany. During the Han period, most weapons were made of iron or steel."
+crossbow_inv: "Crossbow"
+crossbow_inv_desc: "The crossbow was developed in China with some evidence dating its use to 600 BC. By the Warring States period, the crossbow had been effectively integrated into the armies of china."
+base_defensive_inv: "City Fortifications"
+base_defensive_inv_desc: "Walls, ramparts, and more!"
+siege_engine_inv_1: "Siege Engines"
+siege_engine_inv_1_desc: ""
+siege_engine_inv_2: "Siege Catapults"
+siege_engine_inv_2_desc: ""
+siege_engine_inv_3: "Onagers"
+siege_engine_inv_3_desc: "The kick back from these Roman catapults gave the name meaning wild ass. Although there is little evidence of its origin in the 3rd century BC, it is known for its use by the Romans in the 4th century AD."
+siege_engine_inv_4: "Battering Ram"
+siege_engine_inv_4_desc: ""
 
 
 
