--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -58,8 +58,17 @@ siege_engine_inv_3: "Onagers"
 siege_engine_inv_3_desc: "The kick back from these Roman catapults gave the name meaning wild ass. Although there is little evidence of its origin in the 3rd century BC, it is known for its use by the Romans in the 4th century AD."
 siege_engine_inv_4: "Battering Ram"
 siege_engine_inv_4_desc: ""
-
-
+#religious
+religious_calendar_inv: "Religious Calendar"
+religous_calendar_inv_desc: "Calendars have been used for millennia, but the integration of religious holy days was a vital part of ancient culture."
+religious_wisdom_inv_1: "Expanded Libraries"
+religious_wisdom_inv_1_desc: "The collection of books and ancient texts is important for the cultural and academic advancement. Placing emphasis on the expansion of libraries would be beneficial to our nation."
+religious_wisdom_inv_2: "State Sponsored Philosophy"
+religious_wisdom_inv_2_desc: "A state sponsored philosophy of morals in conjunction with religious practices can help define our nation culturally."
+religious_wisdom_inv_3: "State Atheism"
+religious_wisdom_inv_3_desc: "God is dead"
+divine_equality_inv: "Divine Equality"
+divine_equality_inv_desc: "Equality under the divine has come in many forms, but usually disregarded foreigners. Mohism was one of the first philosophies to preach universal love--ai--that was reserved for all mankind. If our religion adopts this idea, change is likely to come from within."
 
 
 
