--- a/localization/english/ti_laws_l_english.yml
+++ b/localization/english/ti_laws_l_english.yml
@@ -58,6 +58,53 @@ siege_engine_inv_3: "Onagers"
 siege_engine_inv_3_desc: "The kick back from these Roman catapults gave the name meaning wild ass. Although there is little evidence of its origin in the 3rd century BC, it is known for its use by the Romans in the 4th century AD."
 siege_engine_inv_4: "Battering Ram"
 siege_engine_inv_4_desc: ""
+helmet_inv: "Stylized Helmets"
+helmet_inv_desc: "Stylized helmets specific to our culture bring unifmority in our ranks and diverity compared to our enemies. It also looks cool."
+saddle_inv: "Saddle Design"
+saddle_inv_desc: "Even a simple cloth over a horse is better than riding bareback... I guess... I wouldn't know I've never ridden a horse."
+armour_inv_3: "Stylized Helmets"
+armour_inv_3_desc: "Stylized helmets specific to our culture bring unifmority in our ranks and diverity compared to our enemies. It also looks cool."
+greek_helmet_inv_1: "Korinthian Helmet"
+greek_helmet_inv_1_desc: ""
+greek_helmet_inv_2: "Attic Helmet"
+greek_helmet_inv_2_desc: ""
+greek_helmet_inv_3: "Phrygian Helmet"
+greek_helmet_inv_3_desc: ""
+greek_helmet_inv_4: "Boetian Helmet"
+greek_helmet_inv_4_desc: ""
+latin_helmet_inv_1: "Gaela Helmet"
+latin_helmet_inv_1_desc: ""
+indian_helmet_inv_1: "Śirāstrāṇa"
+indian_helmet_inv_1_desc: "Good luck pronouncing this one."
+chinese_helmet_inv_1: "Warring States Helmet"
+chinese_helmet_inv_1_desc: "The Zhou helmet was modified to resemble more of a cap made of iron that protected the face and still offered full visibility. It looked similar to the korinthian helmet."
+chinese_helmet_inv_2: "Lamellar Helmet"
+chinese_helmet_inv_2_desc: "Iron helmets constructed with multiple lamellae began to replace the one piece bronze helmets of old. One sample discovered in Yi county, Hebei Province was composed of 89 lamellae."
+chinese_armour_inv_1: "Lamellar Armour"
+chinese_armour_inv_1_desc: "In ancient China, lamellar armour appeared by the 5th century BC. It consisted of individual armour pieces (lamellae, lamella singular) that were either riveted or laced together to form a suit of armour."
+chinese_armour_inv_2: "Sleeved Armour"
+chinese_armour_inv_2_desc: "Lamellar Armour was modified throughout the Warring States and Han eras, with some including hoods and sleeves. However, none were resistant to crossbows anyway so..."
+greek_armour_inv_1: "Phalanx Cuirass"
+greek_armour_inv_1_desc: "The greek cuirass was made of bronze or iron depending on the era and was important to the phalanx. It offered full body protection and was utilized by upper class citizen-soldiers."
+greek_armour_inv_2: "Linothorax"
+greek_armour_inv_2_desc: "Literally linen-breastplate, the linothorax was used in ancient Greece from the 6th Century BC to the 3rd Century AD. On the Alexander Sarcophagus and Alexander Mosaic, Alexander the Great and his soldiers wear this type of armour."
+latin_armour_inv_1: "Lorica Hamata"
+latin_armour_inv_1_desc: "The Lorica hamata was a type of mail armor used by soldiers for over 600 years (3rd century BC to 4th century AD) from the Roman Republic to the Roman Empire. Lorica hamata comes from the Latin hamatus--hooked--as the rings hook into one another."
+latin_armour_inv_2: "Lorica Segmentata"
+latin_armour_inv_2_desc: "Despite the armor being commonly associated with the Romans, it was used by other civilizations before the Romans. The armor was originally used by the Parthians and possibly the Dacians, Scythians, or Sarmatians before the Romans used it. It was possibly introduced in the mid 1st Century BC and fell out of favor around the Crisis of the Third Century."
+indian_armour_inv_1: "Lohajālika Armour"
+indian_armour_inv_1_desc: "Lohajālika, a type of mail armor made from iron or steel, is renowned for its exceptional durability, lightweight nature, and strength. In ancient Indian armories, Lohajālika was prevalent due to its lightweight properties and resilience against a variety of attacks, particularly those from bladed weapons such as swords and axes."
+indian_armour_inv_2: "Kavacha"
+indian_armour_inv_2_desc: "Kavacha was plate armor that covered the chest, torso and other parts of the body, providing protection to warriors. It was tightly fitted and made of metal or leather, offering defense in battle."
+greek_shield_inv_1: "Aspis"
+greek_shield_inv_1_desc: "The Aspis--or hoplon--was made possible partly by its shape, which allowed it to be supported comfortably on the shoulder. The revolutionary part of the shield was, in fact, the grip. Known as an argive grip, it placed the handle at the edge of the shield and was supported by a leather or bronze fastening for the forearm at the center."
+greek_shield_inv_2: "Telamon"
+greek_shield_inv_2_desc: "The size of this shield made it possible to be worn around the neck and freed noth arms, allowing the phalangites the ability to carry long pikes."
+greek_shield_inv_2: "Thureos"
+greek_shield_inv_2_desc: "The soze of this shield made it possible to be worn around the neck and freed noth arms, allowing the phalangites the ability to carry long pikes."
+
+
+
 #religious
 religious_calendar_inv: "Religious Calendar"
 religous_calendar_inv_desc: "Calendars have been used for millennia, but the integration of religious holy days was a vital part of ancient culture."
