--- a/localization/english/text_l_english.yml
+++ b/localization/english/text_l_english.yml
@@ -523,8 +523,8 @@ citrus: "Citrus"
  porcelainDESC: "A type of specialized ceramic that is created in an incredibly hot kiln, porcelains are often glazed and decorated with stylized images - a sharp contrast to the simpler earthenware dishes that are made."
  rice: "Rice"
  riceDESC: "Often found growing in carefully cultivated terraces, rice is a starchy grain that is the foundation of many Eastern cuisines."
- wootz_steel: "Wootz Steel"
- wootz_steelDESC: "Blacksmiths in southern India created this carbon-infused alloy of steel hundreds of years ago, which has quickly become prized for its strength and durability. A sword made from wootz steel is often worth its weight in gold."
+ wootz_steel: "Steel"
+ wootz_steelDESC: "Wootz steel from India, noric steel from Europe, and Chinese steel have all been life changing developments in the ancient world. From weaponry to farm tools, steel is covetted by all."
  tea: "Tea"
  teaDESC: "The leaves of this fragrant shrub are often dried and mixed with boiling water to create a refreshing beverage, one that banishes sleep while promoting a sense of happiness and well-being."
  tortoise_shell: "Tortoise Shell"
