Sardani has been divided into Iolean and Balarian

--- a/localization/english/cultures_l_english.yml
+++ b/localization/english/cultures_l_english.yml
@@ -257,6 +257,8 @@
  nuragic:1 "Sardan"
  corsian:0 "Corsian"
  talaiotic:0 "Talaiotic"
+ balarian:0 "Balarian"
+ iolean:0 "iolean"
  ###NEW PRACYAN###
  kalingan:0 "Kalingan"
  savara:0 "Savaran"
